[gd_scene load_steps=4 format=3 uid="uid://bgl77y8usbe7v"]

[ext_resource type="FontFile" uid="uid://7blsmj3oxjxo" path="res://assets/fonts/MinecraftBold-nMK1.otf" id="1_mf8jw"]
[ext_resource type="Script" uid="uid://d4m06sp18jg6r" path="res://scripts/finish_screen.gd" id="1_t0m50"]
[ext_resource type="FontFile" uid="uid://eruvc81au5m0" path="res://assets/fonts/MinecraftRegular-Bmg3.otf" id="2_t0m50"]

[node name="FinishScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0m50")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.0
offset_top = -320.0
offset_right = 395.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GoodTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_mf8jw")
theme_override_font_sizes/font_size = 100
text = "Game finished"

[node name="WinnerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_t0m50")
theme_override_font_sizes/font_size = 50
text = "Game finished"
